Fix blur on safari.

--- a/templates/static/css/style.css
+++ b/templates/static/css/style.css
@@ -25,6 +25,7 @@ nav {
   gap: 12px;
   align-items: center;
   background-color: rgba(0, 0, 0, 0.1);
+  -webkit-backdrop-filter: blur(20px);
   backdrop-filter: blur(20px);
   border-radius: 28px;
   padding-right: 12px;
